:closed_lock_with_key: use binary format for keyset storage