@@ -10,7 +10,7 @@ import org.slf4j.LoggerFactory;
 import com.google.crypto.tink.InsecureSecretKeyAccess;
 import com.google.crypto.tink.KeysetHandle;
 import com.google.crypto.tink.Parameters;
-import com.google.crypto.tink.TinkJsonProtoKeysetFormat;
+import com.google.crypto.tink.TinkProtoKeysetFormat;
 
 public class Tink {
     KeysetHandle loadKeyset(Path file, Parameters parameters) throws IOException, GeneralSecurityException {
@@ -18,11 +18,10 @@ public class Tink {
             logger.warn("couldn't found {}, will be created", file);
             KeysetHandle handle = KeysetHandle.generateNew(parameters);
 
-            String serializedKeyset = TinkJsonProtoKeysetFormat.serializeKeyset(handle, InsecureSecretKeyAccess.get());
-            Files.write(file, serializedKeyset.getBytes());
+            byte[] buf = TinkProtoKeysetFormat.serializeKeyset(handle, InsecureSecretKeyAccess.get());
+            Files.write(file, buf);
         }
-
-        KeysetHandle handle = TinkJsonProtoKeysetFormat.parseKeyset(Files.readString(file),
+        KeysetHandle handle = TinkProtoKeysetFormat.parseKeyset(Files.readAllBytes(file),
                 InsecureSecretKeyAccess.get());
         return handle;
     }
